fixed content 3 padding was too high caused blue box to move weirdlywhen changing resolution instantly

--- a/css_sheets/stylesheet.css
+++ b/css_sheets/stylesheet.css
@@ -161,8 +161,9 @@ main {
 
 .content-3 {
     background-color: var(--white-header);
-    text-align: center;
-    padding: 70px 400px;
+    display: flex;
+    justify-content: center;
+    padding: 80px 0;
 }
 
 .box {
@@ -170,7 +171,7 @@ main {
     justify-content: center;
     background-color: var(--blue-background);
     gap: 200px;
-    padding: 40px 0;
+    padding: 40px 80px;
     border-radius: 5px;
 }
 
